5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4472/executions/1834_1279.log
== SUBMITION (2019-07-01 23:34:06) 
-- CODE:
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(

# Sequencia de movimentos do personagem
mov = input("Movimentos:")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
	# Move personagem para ESQUERDA
	if x == 'A':
		xtab = xtab - 1
	# Move personagem para DIREITA
	elif x == 'D':
		xtab = xtab + 1
	# Move personagem para CIMA
	elif x == 'W':
		ytab = ytab - 1
	# Move personagem para BAIXO
	elif x == 'S':
		ytab = ytab + 1
	# Trata evento
	# Moeda
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda + 1
	# Apaga moeda do tabuleiro
	elif tabuleiro[ytab,xtab] == 0:
		moeda = moeda
	# Zumbi
	elif tabuleiro[ytab,xtab] == 22:
			life = life - 5

# Imprime saidas
print("posicao x:", xtab)
print("posicao y:", ytab)
print("moedas:", moeda)
print("life:", life)
-- EXECUTION TIME:
0.689175
-- ERROR:
  File "/home/codebench/codes/1834/1279/main.py", line 14
    xtab = 0
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 23:34:17) 
-- CODE:
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(

# Sequencia de movimentos do personagem
mov = input("Movimentos:")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
	# Move personagem para ESQUERDA
	if x == 'A':
		xtab = xtab - 1
	# Move personagem para DIREITA
	elif x == 'D':
		xtab = xtab + 1
	# Move personagem para CIMA
	elif x == 'W':
		ytab = ytab - 1
	# Move personagem para BAIXO
	elif x == 'S':
		ytab = ytab + 1
	# Trata evento
	# Moeda
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda + 1
	# Apaga moeda do tabuleiro
	elif tabuleiro[ytab,xtab] == 0:
		moeda = moeda
	# Zumbi
	elif tabuleiro[ytab,xtab] == 22:
			life = life - 5

# Imprime saidas
print("posicao x:", xtab)
print("posicao y:", ytab)
print("moedas:", moeda)
print("life:", life)
-- ERROR:
File "XXXX", line 14
    xtab = 0
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 23:40:56) 
-- CODE:
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(input("Matriz: "))

# Sequencia de movimentos do personagem
mov = input("Movimentos:")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
	# Move personagem para ESQUERDA
	if x == 'A':
		xtab = xtab - 1
	# Move personagem para DIREITA
	elif x == 'D':
		xtab = xtab + 1
	# Move personagem para CIMA
	elif x == 'W':
		ytab = ytab - 1
	# Move personagem para BAIXO
	elif x == 'S':
		ytab = ytab + 1
	# Trata evento
	# Moeda
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda + 1
	# Apaga moeda do tabuleiro
	elif tabuleiro[ytab,xtab] == 0:
		moeda = moeda
	# Zumbi
	elif tabuleiro[ytab,xtab] == 22:
			life = life - 5

# Imprime saidas
print("posicao x:", xtab)
print("posicao y:", ytab)
print("moedas:", moeda)
print("life:", life)
-- EXECUTION TIME:
0.896256
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/1279/main.py", line 37, in <module>
    if tabuleiro[ytab,xtab] == 11:
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 23:41:09) 
-- CODE:
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(input("Matriz: "))

# Sequencia de movimentos do personagem
mov = input("Movimentos:")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
	# Move personagem para ESQUERDA
	if x == 'A':
		xtab = xtab - 1
	# Move personagem para DIREITA
	elif x == 'D':
		xtab = xtab + 1
	# Move personagem para CIMA
	elif x == 'W':
		ytab = ytab - 1
	# Move personagem para BAIXO
	elif x == 'S':
		ytab = ytab + 1
	# Trata evento
	# Moeda
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda + 1
	# Apaga moeda do tabuleiro
	elif tabuleiro[ytab,xtab] == 0:
		moeda = moeda
	# Zumbi
	elif tabuleiro[ytab,xtab] == 22:
			life = life - 5

# Imprime saidas
print("posicao x:", xtab)
print("posicao y:", ytab)
print("moedas:", moeda)
print("life:", life)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 23:44:17) 
-- CODE:
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(input("Matriz: "))

# Sequencia de movimentos do personagem
mov = input("Movimentos:")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
	# Move personagem para ESQUERDA
	if x == 'A':
		xtab = xtab - 1
	# Move personagem para DIREITA
	elif x == 'D':
		xtab = xtab + 1
	# Move personagem para CIMA
	elif x == 'W':
		ytab = ytab - 1
	# Move personagem para BAIXO
	elif x == 'S':
		ytab = ytab + 1

# Trata evento
# Moeda
if tabuleiro[ytab,xtab] == 11:
	moeda = moeda + 1
	# Apaga moeda do tabuleiro
elif tabuleiro[ytab,xtab] == 0:
	moeda = moeda
	# Zumbi
elif tabuleiro[ytab,xtab] == 22:
		life = life - 5

# Imprime saidas
print("posicao x:", xtab)
print("posicao y:", ytab)
print("moedas:", moeda)
print("life:", life)
-- EXECUTION TIME:
1.0783
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/1279/main.py", line 38, in <module>
    if tabuleiro[ytab,xtab] == 11:
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 23:44:21) 
-- CODE:
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(input("Matriz: "))

# Sequencia de movimentos do personagem
mov = input("Movimentos:")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
	# Move personagem para ESQUERDA
	if x == 'A':
		xtab = xtab - 1
	# Move personagem para DIREITA
	elif x == 'D':
		xtab = xtab + 1
	# Move personagem para CIMA
	elif x == 'W':
		ytab = ytab - 1
	# Move personagem para BAIXO
	elif x == 'S':
		ytab = ytab + 1

# Trata evento
# Moeda
if tabuleiro[ytab,xtab] == 11:
	moeda = moeda + 1
	# Apaga moeda do tabuleiro
elif tabuleiro[ytab,xtab] == 0:
	moeda = moeda
	# Zumbi
elif tabuleiro[ytab,xtab] == 22:
		life = life - 5

# Imprime saidas
print("posicao x:", xtab)
print("posicao y:", ytab)
print("moedas:", moeda)
print("life:", life)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 23:44:53) 
-- CODE:
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(input("Matriz: "))

# Sequencia de movimentos do personagem
mov = input("Movimentos:")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
	# Move personagem para ESQUERDA
	if x == 'A':
		xtab = xtab - 1
	# Move personagem para DIREITA
	elif x == 'D':
		xtab = xtab + 1
	# Move personagem para CIMA
	elif x == 'W':
		ytab = ytab - 1
	# Move personagem para BAIXO
	elif x == 'S':
		ytab = ytab + 1

# Trata evento
# Moeda
if tabuleiro[ytab,xtab] == 11:
	moeda = moeda + 1
	# Apaga moeda do tabuleiro
elif tabuleiro[ytab,xtab] == 0:
	moeda = moeda
	# Zumbi
elif tabuleiro[ytab,xtab] == 22:
		life = life - 5

# Imprime saidas
print("posicao x:", xtab)
print("posicao y:", ytab)
print("moedas:", moeda)
print("life:", life)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 23:44:53) 
-- CODE:
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(input("Matriz: "))

# Sequencia de movimentos do personagem
mov = input("Movimentos:")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
	# Move personagem para ESQUERDA
	if x == 'A':
		xtab = xtab - 1
	# Move personagem para DIREITA
	elif x == 'D':
		xtab = xtab + 1
	# Move personagem para CIMA
	elif x == 'W':
		ytab = ytab - 1
	# Move personagem para BAIXO
	elif x == 'S':
		ytab = ytab + 1

# Trata evento
# Moeda
if tabuleiro[ytab,xtab] == 11:
	moeda = moeda + 1
	# Apaga moeda do tabuleiro
elif tabuleiro[ytab,xtab] == 0:
	moeda = moeda
	# Zumbi
elif tabuleiro[ytab,xtab] == 22:
		life = life - 5

# Imprime saidas
print("posicao x:", xtab)
print("posicao y:", ytab)
print("moedas:", moeda)
print("life:", life)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 23:44:54) 
-- CODE:
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(input("Matriz: "))

# Sequencia de movimentos do personagem
mov = input("Movimentos:")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
	# Move personagem para ESQUERDA
	if x == 'A':
		xtab = xtab - 1
	# Move personagem para DIREITA
	elif x == 'D':
		xtab = xtab + 1
	# Move personagem para CIMA
	elif x == 'W':
		ytab = ytab - 1
	# Move personagem para BAIXO
	elif x == 'S':
		ytab = ytab + 1

# Trata evento
# Moeda
if tabuleiro[ytab,xtab] == 11:
	moeda = moeda + 1
	# Apaga moeda do tabuleiro
elif tabuleiro[ytab,xtab] == 0:
	moeda = moeda
	# Zumbi
elif tabuleiro[ytab,xtab] == 22:
		life = life - 5

# Imprime saidas
print("posicao x:", xtab)
print("posicao y:", ytab)
print("moedas:", moeda)
print("life:", life)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 23:44:54) 
-- CODE:
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(input("Matriz: "))

# Sequencia de movimentos do personagem
mov = input("Movimentos:")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
	# Move personagem para ESQUERDA
	if x == 'A':
		xtab = xtab - 1
	# Move personagem para DIREITA
	elif x == 'D':
		xtab = xtab + 1
	# Move personagem para CIMA
	elif x == 'W':
		ytab = ytab - 1
	# Move personagem para BAIXO
	elif x == 'S':
		ytab = ytab + 1

# Trata evento
# Moeda
if tabuleiro[ytab,xtab] == 11:
	moeda = moeda + 1
	# Apaga moeda do tabuleiro
elif tabuleiro[ytab,xtab] == 0:
	moeda = moeda
	# Zumbi
elif tabuleiro[ytab,xtab] == 22:
		life = life - 5

# Imprime saidas
print("posicao x:", xtab)
print("posicao y:", ytab)
print("moedas:", moeda)
print("life:", life)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 23:44:54) 
-- CODE:
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(input("Matriz: "))

# Sequencia de movimentos do personagem
mov = input("Movimentos:")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
	# Move personagem para ESQUERDA
	if x == 'A':
		xtab = xtab - 1
	# Move personagem para DIREITA
	elif x == 'D':
		xtab = xtab + 1
	# Move personagem para CIMA
	elif x == 'W':
		ytab = ytab - 1
	# Move personagem para BAIXO
	elif x == 'S':
		ytab = ytab + 1

# Trata evento
# Moeda
if tabuleiro[ytab,xtab] == 11:
	moeda = moeda + 1
	# Apaga moeda do tabuleiro
elif tabuleiro[ytab,xtab] == 0:
	moeda = moeda
	# Zumbi
elif tabuleiro[ytab,xtab] == 22:
		life = life - 5

# Imprime saidas
print("posicao x:", xtab)
print("posicao y:", ytab)
print("moedas:", moeda)
print("life:", life)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 23:44:54) 
-- CODE:
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(input("Matriz: "))

# Sequencia de movimentos do personagem
mov = input("Movimentos:")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
	# Move personagem para ESQUERDA
	if x == 'A':
		xtab = xtab - 1
	# Move personagem para DIREITA
	elif x == 'D':
		xtab = xtab + 1
	# Move personagem para CIMA
	elif x == 'W':
		ytab = ytab - 1
	# Move personagem para BAIXO
	elif x == 'S':
		ytab = ytab + 1

# Trata evento
# Moeda
if tabuleiro[ytab,xtab] == 11:
	moeda = moeda + 1
	# Apaga moeda do tabuleiro
elif tabuleiro[ytab,xtab] == 0:
	moeda = moeda
	# Zumbi
elif tabuleiro[ytab,xtab] == 22:
		life = life - 5

# Imprime saidas
print("posicao x:", xtab)
print("posicao y:", ytab)
print("moedas:", moeda)
print("life:", life)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 23:44:54) 
-- CODE:
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(input("Matriz: "))

# Sequencia de movimentos do personagem
mov = input("Movimentos:")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
	# Move personagem para ESQUERDA
	if x == 'A':
		xtab = xtab - 1
	# Move personagem para DIREITA
	elif x == 'D':
		xtab = xtab + 1
	# Move personagem para CIMA
	elif x == 'W':
		ytab = ytab - 1
	# Move personagem para BAIXO
	elif x == 'S':
		ytab = ytab + 1

# Trata evento
# Moeda
if tabuleiro[ytab,xtab] == 11:
	moeda = moeda + 1
	# Apaga moeda do tabuleiro
elif tabuleiro[ytab,xtab] == 0:
	moeda = moeda
	# Zumbi
elif tabuleiro[ytab,xtab] == 22:
		life = life - 5

# Imprime saidas
print("posicao x:", xtab)
print("posicao y:", ytab)
print("moedas:", moeda)
print("life:", life)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 23:45:09) 
-- CODE:
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(input("Matriz: "))

# Sequencia de movimentos do personagem
mov = input("Movimentos:")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
	# Move personagem para ESQUERDA
	if x == 'A':
		xtab = xtab - 1
	# Move personagem para DIREITA
	elif x == 'D':
		xtab = xtab + 1
	# Move personagem para CIMA
	elif x == 'W':
		ytab = ytab - 1
	# Move personagem para BAIXO
	elif x == 'S':
		ytab = ytab + 1

# Trata evento
# Moeda
if tabuleiro[ytab,xtab] == 11:
	moeda = moeda + 1
	# Apaga moeda do tabuleiro
elif tabuleiro[ytab,xtab] == 0:
	moeda = moeda
	# Zumbi
elif tabuleiro[ytab,xtab] == 22:
		life = life - 5

# Imprime saidas
print("posicao x:", xtab)
print("posicao y:", ytab)
print("moedas:", moeda)
print("life:", life)
-- EXECUTION TIME:
1.24014
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/1279/main.py", line 38, in <module>
    if tabuleiro[ytab,xtab] == 11:
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 23:45:28) 
-- CODE:
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(input("Matriz: "))

# Sequencia de movimentos do personagem
mov = input("Movimentos:")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
	# Move personagem para ESQUERDA
	if x == 'A':
		xtab = xtab - 1
	# Move personagem para DIREITA
	elif x == 'D':
		xtab = xtab + 1
	# Move personagem para CIMA
	elif x == 'W':
		ytab = ytab - 1
	# Move personagem para BAIXO
	elif x == 'S':
		ytab = ytab + 1

# Trata evento
# Moeda
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda + 1
	# Apaga moeda do tabuleiro
	elif tabuleiro[ytab,xtab] == 0:
		moeda = moeda
	# Zumbi
	elif tabuleiro[ytab,xtab] == 22:
			life = life - 5

# Imprime saidas
	print("posicao x:", xtab)
	print("posicao y:", ytab)
	print("moedas:", moeda)
	print("life:", life)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 23:46:52) 
-- CODE:
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(

# Sequencia de movimentos do personagem
mov = input("Movimentos:")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
	# Move personagem para ESQUERDA
	if x == 'A':
		xtab = xtab - 1
	# Move personagem para DIREITA
	elif x == 'D':
		xtab = xtab + 1
	# Move personagem para CIMA
	elif x == 'W':
		ytab = ytab - 1
	# Move personagem para BAIXO
	elif x == 'S':
		ytab = ytab + 1
	# Trata evento
	# Moeda
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda + 1
	# Apaga moeda do tabuleiro
	elif tabuleiro[ytab,xtab] == 0:
		moeda = moeda
	# Zumbi
	elif tabuleiro[ytab,xtab] == 22:
			life = life - 5

# Imprime saidas
print("posicao x:", xtab)
print("posicao y:", ytab)
print("moedas:", moeda)
print("life:", life)

-- EXECUTION TIME:
0.74789
-- ERROR:
  File "/home/codebench/codes/1834/1279/main.py", line 14
    xtab = 0
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 23:47:38) 
-- CODE:
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Matriz: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos:")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
	# Move personagem para ESQUERDA
	if x == 'A':
		xtab = xtab - 1
	# Move personagem para DIREITA
	elif x == 'D':
		xtab = xtab + 1
	# Move personagem para CIMA
	elif x == 'W':
		ytab = ytab - 1
	# Move personagem para BAIXO
	elif x == 'S':
		ytab = ytab + 1
	# Trata evento
	# Moeda
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda + 1
	# Apaga moeda do tabuleiro
	elif tabuleiro[ytab,xtab] == 0:
		moeda = moeda
	# Zumbi
	elif tabuleiro[ytab,xtab] == 22:
			life = life - 5

# Imprime saidas
print("posicao x:", xtab)
print("posicao y:", ytab)
print("moedas:", moeda)
print("life:", life)

-- EXECUTION TIME:
1.00737
-- TEST CASE 1:
---- input:
[[0,11,0,11,0,11,22,0,11,0,11,0,11],[11,0,22,11,0,11,11,0,11,0,0,0,22],[11,22,22,11,0,11,11,0,22,0,11,11,22],[22,11,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,11,0,0,11,0,22,0,0,22,11],[0,11,0,11,0,11,22,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,11,0,0,11,11],[11,11,22,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
DDDDSDSAAWW
---- correct output:
posicao x:  3
posicao y:  0
moedas:  6
life:  100

---- user output:
posicao x: 3
posicao y: 0
moedas: 7
life: 100
-- TEST CASE 2:
---- input:
[[22,11,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,11,0,0,11,0,22,0,0,22,11],[0,11,0,11,0,11,22,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,11,0,0,11,11],[11,11,22,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
DSSSDSAASD
---- correct output:
posicao x:  1
posicao y:  5
moedas:  7
life:  95
---- user output:
posicao x: 1
posicao y: 5
moedas: 7
life: 95
-- TEST CASE 3:
---- input:
[[22,22,11,11,11,11,22,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,11,0,0,11,11],[11,11,22,11,0,0,11,0,22,0,22,0,11],[0,11,0,11,0,11,22,0,11,0,11,0,11],[11,0,22,11,0,11,11,0,11,0,0,0,22],[11,22,22,11,0,11,11,0,22,0,11,11,22],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
DDDSSSAWDWAS
---- correct output:
posicao x:  2
posicao y:  2
moedas:  5
life:  80
---- user output:
Matriz: Movimentos:posicao x: 2
posicao y: 2
moedas: 7
life: 80
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 23:48:36) 
-- CODE:
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *
from numpy.linalg import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Matriz: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
	# Move personagem para ESQUERDA
	if x == 'A':
		xtab = xtab - 1
	# Move personagem para DIREITA
	elif x == 'D':
		xtab = xtab + 1
	# Move personagem para CIMA
	elif x == 'W':
		ytab = ytab - 1
	# Move personagem para BAIXO
	elif x == 'S':
		ytab = ytab + 1
	# Trata evento
	# Moeda
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda + 1
	# Apaga moeda do tabuleiro
	elif tabuleiro[ytab,xtab] == 0:
		moeda = moeda
	# Zumbi
	elif tabuleiro[ytab,xtab] == 22:
			life = life - 5

# Imprime saidas
print("posicao x:", xtab)
print("posicao y:", ytab)
print("moedas:", moeda)
print("life:", life)

-- EXECUTION TIME:
0.804751
-- TEST CASE 1:
---- input:
[[0,11,0,11,0,11,22,0,11,0,11,0,11],[11,0,22,11,0,11,11,0,11,0,0,0,22],[11,22,22,11,0,11,11,0,22,0,11,11,22],[22,11,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,11,0,0,11,0,22,0,0,22,11],[0,11,0,11,0,11,22,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,11,0,0,11,11],[11,11,22,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
DDDDSDSAAWW
---- correct output:
posicao x:  3
posicao y:  0
moedas:  6
life:  100

---- user output:
posicao x: 3
posicao y: 0
moedas: 7
life: 100
-- TEST CASE 2:
---- input:
[[22,11,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,11,0,0,11,0,22,0,0,22,11],[0,11,0,11,0,11,22,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,11,0,0,11,11],[11,11,22,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
DSSSDSAASD
---- correct output:
posicao x:  1
posicao y:  5
moedas:  7
life:  95
---- user output:
posicao x: 1
posicao y: 5
moedas: 7
life: 95
-- TEST CASE 3:
---- input:
[[22,22,11,11,11,11,22,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,11,0,0,11,11],[11,11,22,11,0,0,11,0,22,0,22,0,11],[0,11,0,11,0,11,22,0,11,0,11,0,11],[11,0,22,11,0,11,11,0,11,0,0,0,22],[11,22,22,11,0,11,11,0,22,0,11,11,22],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
DDDSSSAWDWAS
---- correct output:
posicao x:  2
posicao y:  2
moedas:  5
life:  80
---- user output:
posicao x: 2
posicao y: 2
moedas: 7
life: 80
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 23:48:42) 
-- CODE:
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *
from numpy.linalg import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Matriz: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
	# Move personagem para ESQUERDA
	if x == 'A':
		xtab = xtab - 1
	# Move personagem para DIREITA
	elif x == 'D':
		xtab = xtab + 1
	# Move personagem para CIMA
	elif x == 'W':
		ytab = ytab - 1
	# Move personagem para BAIXO
	elif x == 'S':
		ytab = ytab + 1
	# Trata evento
	# Moeda
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda + 1
	# Apaga moeda do tabuleiro
	elif tabuleiro[ytab,xtab] == 0:
		moeda = moeda
	# Zumbi
	elif tabuleiro[ytab,xtab] == 22:
			life = life - 5

# Imprime saidas
print("posicao x:", xtab)
print("posicao y:", ytab)
print("moedas:", moeda)
print("life:", life)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 23:49:49) 
-- CODE:
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *
from numpy.linalg import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Matriz: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
	# Move personagem para ESQUERDA
	if x == 'A':
		xtab = xtab - 1
	# Move personagem para DIREITA
	elif x == 'D':
		xtab = xtab + 1
	# Move personagem para CIMA
	elif x == 'W':
		ytab = ytab - 1
	# Move personagem para BAIXO
	elif x == 'S':
		ytab = ytab + 1
	# Trata evento
	# Moeda
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda + 1
	# Apaga moeda do tabuleiro
	elif tabuleiro[ytab,xtab] == 0:
		moeda = moeda
	# Zumbi
	elif tabuleiro[ytab,xtab] == 22:
			life = life - 5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)

-- EXECUTION TIME:
1.2963
-- TEST CASE 1:
---- input:
[[0,11,0,11,0,11,22,0,11,0,11,0,11],[11,0,22,11,0,11,11,0,11,0,0,0,22],[11,22,22,11,0,11,11,0,22,0,11,11,22],[22,11,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,11,0,0,11,0,22,0,0,22,11],[0,11,0,11,0,11,22,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,11,0,0,11,11],[11,11,22,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
DDDDSDSAAWW
---- correct output:
posicao x:  3
posicao y:  0
moedas:  6
life:  100

---- user output:
posicao x:  3
posicao y:  0
moedas:  7
life:  100
-- TEST CASE 2:
---- input:
[[22,11,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,11,0,0,11,0,22,0,0,22,11],[0,11,0,11,0,11,22,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,11,0,0,11,11],[11,11,22,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
DSSSDSAASD
---- correct output:
posicao x:  1
posicao y:  5
moedas:  7
life:  95
---- user output:
Matriz: Movimentos: posicao x:  1
posicao y:  5
moedas:  7
life:  95
-- TEST CASE 3:
---- input:
[[22,22,11,11,11,11,22,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,11,0,0,11,11],[11,11,22,11,0,0,11,0,22,0,22,0,11],[0,11,0,11,0,11,22,0,11,0,11,0,11],[11,0,22,11,0,11,11,0,11,0,0,0,22],[11,22,22,11,0,11,11,0,22,0,11,11,22],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
DDDSSSAWDWAS
---- correct output:
posicao x:  2
posicao y:  2
moedas:  5
life:  80
---- user output:
Matriz: Movimentos: posicao x:  2
posicao y:  2
moedas:  7
life:  80
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 23:50:47) 
-- CODE:
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *
from numpy.linalg import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Matriz: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
	# Move personagem para ESQUERDA
	if x == 'A':
		xtab = xtab - 1
	# Move personagem para DIREITA
	elif x == 'D':
		xtab = xtab + 1
	# Move personagem para CIMA
	elif x == 'W':
		ytab = ytab - 1
	# Move personagem para BAIXO
	elif x == 'S':
		ytab = ytab + 1
	# Trata evento
	# Moeda
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda + 1
	# Apaga moeda do tabuleiro
	elif tabuleiro[ytab,xtab] == 0:
		moeda = moeda
	# Zumbi
	elif tabuleiro[ytab,xtab] == 22:
			life = life - 5

# Imprime saidas
print("posicao x:  ", xtab)
print("posicao y:  ", ytab)
print("moedas:  ", moeda)
print("life:  ", life)

-- EXECUTION TIME:
0.759429
-- TEST CASE 1:
---- input:
[[0,11,0,11,0,11,22,0,11,0,11,0,11],[11,0,22,11,0,11,11,0,11,0,0,0,22],[11,22,22,11,0,11,11,0,22,0,11,11,22],[22,11,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,11,0,0,11,0,22,0,0,22,11],[0,11,0,11,0,11,22,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,11,0,0,11,11],[11,11,22,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
DDDDSDSAAWW
---- correct output:
posicao x:  3
posicao y:  0
moedas:  6
life:  100

---- user output:
posicao x:   3
posicao y:   0
moedas:   7
life:   100
-- TEST CASE 2:
---- input:
[[22,11,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,11,0,0,11,0,22,0,0,22,11],[0,11,0,11,0,11,22,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,11,0,0,11,11],[11,11,22,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
DSSSDSAASD
---- correct output:
posicao x:  1
posicao y:  5
moedas:  7
life:  95
---- user output:
posicao x:   1
posicao y:   5
moedas:   7
life:   95
-- TEST CASE 3:
---- input:
[[22,22,11,11,11,11,22,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,11,0,0,11,11],[11,11,22,11,0,0,11,0,22,0,22,0,11],[0,11,0,11,0,11,22,0,11,0,11,0,11],[11,0,22,11,0,11,11,0,11,0,0,0,22],[11,22,22,11,0,11,11,0,22,0,11,11,22],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
DDDSSSAWDWAS
---- correct output:
posicao x:  2
posicao y:  2
moedas:  5
life:  80
---- user output:
Matriz: Movimentos: posicao x:   2
posicao y:   2
moedas:   7
life:   80
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 23:50:51) 
-- CODE:
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *
from numpy.linalg import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Matriz: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
	# Move personagem para ESQUERDA
	if x == 'A':
		xtab = xtab - 1
	# Move personagem para DIREITA
	elif x == 'D':
		xtab = xtab + 1
	# Move personagem para CIMA
	elif x == 'W':
		ytab = ytab - 1
	# Move personagem para BAIXO
	elif x == 'S':
		ytab = ytab + 1
	# Trata evento
	# Moeda
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda + 1
	# Apaga moeda do tabuleiro
	elif tabuleiro[ytab,xtab] == 0:
		moeda = moeda
	# Zumbi
	elif tabuleiro[ytab,xtab] == 22:
			life = life - 5

# Imprime saidas
print("posicao x:  ", xtab)
print("posicao y:  ", ytab)
print("moedas:  ", moeda)
print("life:  ", life)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 23:53:50) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(

# Sequencia de movimentos do personagem
mov = input("Movimentos:")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
	# Move personagem para ESQUERDA
	if x == 'A':
		xtab = xtab - 1
	# Move personagem para DIREITA
	elif x == 'D':
		xtab = xtab + 1
	# Move personagem para CIMA
	elif x == 'W':
		ytab = ytab - 1
	# Move personagem para BAIXO
	elif x == 'S':
		ytab = ytab + 1
	# Trata evento
	# Moeda
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda + 1
	# Apaga moeda do tabuleiro
	elif tabuleiro[ytab,xtab] == 0:
		moeda = moeda
	# Zumbi
	elif tabuleiro[ytab,xtab] == 22:
			life = life - 5

# Imprime saidas
print("posicao x:", xtab)
print("posicao y:", ytab)
print("moedas:", moeda)
print("life:", life)
-- ERROR:
File "XXXX", line 15
    xtab = 0
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 23:54:30) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("matriz: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos:")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
	# Move personagem para ESQUERDA
	if x == 'A':
		xtab = xtab - 1
	# Move personagem para DIREITA
	elif x == 'D':
		xtab = xtab + 1
	# Move personagem para CIMA
	elif x == 'W':
		ytab = ytab - 1
	# Move personagem para BAIXO
	elif x == 'S':
		ytab = ytab + 1
	# Trata evento
	# Moeda
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda + 1
	# Apaga moeda do tabuleiro
	elif tabuleiro[ytab,xtab] == 0:
		moeda = moeda
	# Zumbi
	elif tabuleiro[ytab,xtab] == 22:
			life = life - 5

# Imprime saidas
print("posicao x:", xtab)
print("posicao y:", ytab)
print("moedas:", moeda)
print("life:", life)
-- EXECUTION TIME:
0.887394
-- TEST CASE 1:
---- input:
[[0,11,0,11,0,11,22,0,11,0,11,0,11],[11,0,22,11,0,11,11,0,11,0,0,0,22],[11,22,22,11,0,11,11,0,22,0,11,11,22],[22,11,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,11,0,0,11,0,22,0,0,22,11],[0,11,0,11,0,11,22,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,11,0,0,11,11],[11,11,22,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
DDDDSDSAAWW
---- correct output:
posicao x:  3
posicao y:  0
moedas:  6
life:  100

---- user output:
posicao x: 3
posicao y: 0
moedas: 7
life: 100
-- TEST CASE 2:
---- input:
[[22,11,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,11,0,0,11,0,22,0,0,22,11],[0,11,0,11,0,11,22,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,11,0,0,11,11],[11,11,22,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
DSSSDSAASD
---- correct output:
posicao x:  1
posicao y:  5
moedas:  7
life:  95
---- user output:
posicao x: 1
posicao y: 5
moedas: 7
life: 95
-- TEST CASE 3:
---- input:
[[22,22,11,11,11,11,22,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,11,0,0,11,11],[11,11,22,11,0,0,11,0,22,0,22,0,11],[0,11,0,11,0,11,22,0,11,0,11,0,11],[11,0,22,11,0,11,11,0,11,0,0,0,22],[11,22,22,11,0,11,11,0,22,0,11,11,22],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
DDDSSSAWDWAS
---- correct output:
posicao x:  2
posicao y:  2
moedas:  5
life:  80
---- user output:
posicao x: 2
posicao y: 2
moedas: 7
life: 80
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 23:54:33) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("matriz: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos:")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
	# Move personagem para ESQUERDA
	if x == 'A':
		xtab = xtab - 1
	# Move personagem para DIREITA
	elif x == 'D':
		xtab = xtab + 1
	# Move personagem para CIMA
	elif x == 'W':
		ytab = ytab - 1
	# Move personagem para BAIXO
	elif x == 'S':
		ytab = ytab + 1
	# Trata evento
	# Moeda
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda + 1
	# Apaga moeda do tabuleiro
	elif tabuleiro[ytab,xtab] == 0:
		moeda = moeda
	# Zumbi
	elif tabuleiro[ytab,xtab] == 22:
			life = life - 5

# Imprime saidas
print("posicao x:", xtab)
print("posicao y:", ytab)
print("moedas:", moeda)
print("life:", life)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 23:55:29) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("matriz: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos:")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
	# Move personagem para ESQUERDA
	if x == 'A':
		xtab = xtab - 1
	# Move personagem para DIREITA
	elif x == 'D':
		xtab = xtab + 1
	# Move personagem para CIMA
	elif x == 'W':
		ytab = ytab - 1
	# Move personagem para BAIXO
	elif x == 'S':
		ytab = ytab + 1
	# Trata evento
	# Moeda
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda + 1
	# Apaga moeda do tabuleiro
	elif tabuleiro[ytab,xtab] == 0:
		moeda = moeda
	# Zumbi
	elif tabuleiro[ytab,xtab] == 22:
			life = life - 5

# Imprime saidas
print("posicao x:",xtab)
print("posicao y:",ytab)
print("moedas:",moeda)
print("life:",life)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 23:55:30) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("matriz: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos:")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
	# Move personagem para ESQUERDA
	if x == 'A':
		xtab = xtab - 1
	# Move personagem para DIREITA
	elif x == 'D':
		xtab = xtab + 1
	# Move personagem para CIMA
	elif x == 'W':
		ytab = ytab - 1
	# Move personagem para BAIXO
	elif x == 'S':
		ytab = ytab + 1
	# Trata evento
	# Moeda
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda + 1
	# Apaga moeda do tabuleiro
	elif tabuleiro[ytab,xtab] == 0:
		moeda = moeda
	# Zumbi
	elif tabuleiro[ytab,xtab] == 22:
			life = life - 5

# Imprime saidas
print("posicao x:",xtab)
print("posicao y:",ytab)
print("moedas:",moeda)
print("life:",life)
-- EXECUTION TIME:
1.03623
-- TEST CASE 1:
---- input:
[[0,11,0,11,0,11,22,0,11,0,11,0,11],[11,0,22,11,0,11,11,0,11,0,0,0,22],[11,22,22,11,0,11,11,0,22,0,11,11,22],[22,11,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,11,0,0,11,0,22,0,0,22,11],[0,11,0,11,0,11,22,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,11,0,0,11,11],[11,11,22,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
DDDDSDSAAWW
---- correct output:
posicao x:  3
posicao y:  0
moedas:  6
life:  100

---- user output:
posicao x: 3
posicao y: 0
moedas: 7
life: 100
-- TEST CASE 2:
---- input:
[[22,11,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,11,0,0,11,0,22,0,0,22,11],[0,11,0,11,0,11,22,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,11,0,0,11,11],[11,11,22,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
DSSSDSAASD
---- correct output:
posicao x:  1
posicao y:  5
moedas:  7
life:  95
---- user output:
posicao x: 1
posicao y: 5
moedas: 7
life: 95
-- TEST CASE 3:
---- input:
[[22,22,11,11,11,11,22,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,11,0,0,11,11],[11,11,22,11,0,0,11,0,22,0,22,0,11],[0,11,0,11,0,11,22,0,11,0,11,0,11],[11,0,22,11,0,11,11,0,11,0,0,0,22],[11,22,22,11,0,11,11,0,22,0,11,11,22],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
DDDSSSAWDWAS
---- correct output:
posicao x:  2
posicao y:  2
moedas:  5
life:  80
---- user output:
matriz: Movimentos:posicao x: 2
posicao y: 2
moedas: 7
life: 80
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 23:55:42) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("matriz: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos:")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
	# Move personagem para ESQUERDA
	if x == 'A':
		xtab = xtab - 1
	# Move personagem para DIREITA
	elif x == 'D':
		xtab = xtab + 1
	# Move personagem para CIMA
	elif x == 'W':
		ytab = ytab - 1
	# Move personagem para BAIXO
	elif x == 'S':
		ytab = ytab + 1
	# Trata evento
	# Moeda
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda + 1
	# Apaga moeda do tabuleiro
	elif tabuleiro[ytab,xtab] == 0:
		moeda = moeda
	# Zumbi
	elif tabuleiro[ytab,xtab] == 22:
			life = life - 5

# Imprime saidas
print("posicao x: ",xtab)
print("posicao y: ",ytab)
print("moedas: ",moeda)
print("life: ",life)
-- EXECUTION TIME:
0.931444
-- TEST CASE 1:
---- input:
[[0,11,0,11,0,11,22,0,11,0,11,0,11],[11,0,22,11,0,11,11,0,11,0,0,0,22],[11,22,22,11,0,11,11,0,22,0,11,11,22],[22,11,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,11,0,0,11,0,22,0,0,22,11],[0,11,0,11,0,11,22,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,11,0,0,11,11],[11,11,22,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
DDDDSDSAAWW
---- correct output:
posicao x:  3
posicao y:  0
moedas:  6
life:  100

---- user output:
posicao x:  3
posicao y:  0
moedas:  7
life:  100
-- TEST CASE 2:
---- input:
[[22,11,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,11,0,0,11,0,22,0,0,22,11],[0,11,0,11,0,11,22,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,11,0,0,11,11],[11,11,22,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
DSSSDSAASD
---- correct output:
posicao x:  1
posicao y:  5
moedas:  7
life:  95
---- user output:
posicao x:  1
posicao y:  5
moedas:  7
life:  95
-- TEST CASE 3:
---- input:
[[22,22,11,11,11,11,22,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,11,0,0,11,11],[11,11,22,11,0,0,11,0,22,0,22,0,11],[0,11,0,11,0,11,22,0,11,0,11,0,11],[11,0,22,11,0,11,11,0,11,0,0,0,22],[11,22,22,11,0,11,11,0,22,0,11,11,22],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
DDDSSSAWDWAS
---- correct output:
posicao x:  2
posicao y:  2
moedas:  5
life:  80
---- user output:
posicao x:  2
posicao y:  2
moedas:  7
life:  80
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 00:07:24) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Matriz: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos:")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
	# Move personagem para ESQUERDA
	if x == 'A':
		xtab = xtab - 1
	# Move personagem para DIREITA
	elif x == 'D':
		xtab = xtab + 1
	# Move personagem para CIMA
	elif x == 'W':
		ytab = ytab - 1
	# Move personagem para BAIXO
	elif x == 'S':
		ytab = ytab + 1
	# Trata evento
	# Moeda
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda + 1
	# Apaga moeda do tabuleiro
	elif tabuleiro[ytab,xtab] == 0:
		moeda = moeda
	# Zumbi
	elif tabuleiro[ytab,xtab] == 22:
			life = life - 5

# Imprime saidas
print("posicao x:", xtab)
print("posicao y:", ytab)
print("moedas:", moeda)
print("life:", life)
-- EXECUTION TIME:
1.07815
-- TEST CASE 1:
---- input:
[[0,11,0,11,0,11,22,0,11,0,11,0,11],[11,0,22,11,0,11,11,0,11,0,0,0,22],[11,22,22,11,0,11,11,0,22,0,11,11,22],[22,11,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,11,0,0,11,0,22,0,0,22,11],[0,11,0,11,0,11,22,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,11,0,0,11,11],[11,11,22,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
DDDDSDSAAWW
---- correct output:
posicao x:  3
posicao y:  0
moedas:  6
life:  100

---- user output:
posicao x: 3
posicao y: 0
moedas: 7
life: 100
-- TEST CASE 2:
---- input:
[[22,11,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,11,0,0,11,0,22,0,0,22,11],[0,11,0,11,0,11,22,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,11,0,0,11,11],[11,11,22,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
DSSSDSAASD
---- correct output:
posicao x:  1
posicao y:  5
moedas:  7
life:  95
---- user output:
posicao x: 1
posicao y: 5
moedas: 7
life: 95
-- TEST CASE 3:
---- input:
[[22,22,11,11,11,11,22,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,11,0,0,11,11],[11,11,22,11,0,0,11,0,22,0,22,0,11],[0,11,0,11,0,11,22,0,11,0,11,0,11],[11,0,22,11,0,11,11,0,11,0,0,0,22],[11,22,22,11,0,11,11,0,22,0,11,11,22],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
DDDSSSAWDWAS
---- correct output:
posicao x:  2
posicao y:  2
moedas:  5
life:  80
---- user output:

-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 00:08:24) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Matriz: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos:")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
	# Move personagem para ESQUERDA
	if x == 'A':
		xtab = xtab - 1
	# Move personagem para DIREITA
	elif x == 'D':
		xtab = xtab + 1
	# Move personagem para CIMA
	elif x == 'W':
		ytab = ytab - 1
	# Move personagem para BAIXO
	elif x == 'S':
		ytab = ytab + 1
	# Trata evento
	# Moeda
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda + 1
	# Apaga moeda do tabuleiro
	elif tabuleiro[ytab,xtab] == 0:
		moeda = moeda
	# Zumbi
	elif tabuleiro[ytab,xtab] == 22:
			life = life - 5

# Imprime saidas
print("posicao x:", xtab)
print("posicao y:", ytab)
print("moedas:", moeda)
print("life:", life)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 00:13:23) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Matriz: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos:")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
	# Move personagem para ESQUERDA
	if x == 'A':
		xtab = xtab - 1
	# Move personagem para DIREITA
	elif x == 'D':
		xtab = xtab + 1
	# Move personagem para CIMA
	elif x == 'W':
		ytab = ytab - 1
	# Move personagem para BAIXO
	elif x == 'S':
		ytab = ytab + 1
	# Trata evento
	# Moeda
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda + 1
		tabuleiro[ytab,xtab] = 0
	# Apaga moeda do tabuleiro
	elif tabuleiro[ytab,xtab] == 0:
		moeda = moeda
	# Zumbi
	elif tabuleiro[ytab,xtab] == 22:
			life = life - 5

# Imprime saidas
print("posicao x:", xtab)
print("posicao y:", ytab)
print("moedas:", moeda)
print("life:", life)
-- EXECUTION TIME:
1.10691
-- TEST CASE 1:
---- input:
[[0,11,0,11,0,11,22,0,11,0,11,0,11],[11,0,22,11,0,11,11,0,11,0,0,0,22],[11,22,22,11,0,11,11,0,22,0,11,11,22],[22,11,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,11,0,0,11,0,22,0,0,22,11],[0,11,0,11,0,11,22,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,11,0,0,11,11],[11,11,22,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
DDDDSDSAAWW
---- correct output:
posicao x:  3
posicao y:  0
moedas:  6
life:  100

---- user output:
posicao x: 3
posicao y: 0
moedas: 6
life: 100
-- TEST CASE 2:
---- input:
[[22,11,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,11,0,0,11,0,22,0,0,22,11],[0,11,0,11,0,11,22,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,11,0,0,11,11],[11,11,22,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
DSSSDSAASD
---- correct output:
posicao x:  1
posicao y:  5
moedas:  7
life:  95
---- user output:
posicao x: 1
posicao y: 5
moedas: 7
life: 95
-- TEST CASE 3:
---- input:
[[22,22,11,11,11,11,22,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,11,0,0,11,11],[11,11,22,11,0,0,11,0,22,0,22,0,11],[0,11,0,11,0,11,22,0,11,0,11,0,11],[11,0,22,11,0,11,11,0,11,0,0,0,22],[11,22,22,11,0,11,11,0,22,0,11,11,22],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
DDDSSSAWDWAS
---- correct output:
posicao x:  2
posicao y:  2
moedas:  5
life:  80
---- user output:
posicao x: 2
posicao y: 2
moedas: 5
life: 80
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
